Bug 159015 - HANG: scrolling after opening file
Summary: HANG: scrolling after opening file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:7.6.6 target:24.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-01-04 11:05 UTC by Xisco Faulí
Modified: 2024-02-08 09:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-01-04 11:05:55 UTC
Steps to reproduce:
1. Open attachment 98975 [details] from bug 78658
2. Scroll down

-> LibreOffice hangs

Reproduced in

Version: 24.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 0034d2ab9382da86340738137218791a4ccc9c90
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: fr-FR (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2024-01-04 11:06:40 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-11-16 19:45:05 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-11-17 09:09:20 +0100
commit 191babee4f0ec643b80e96b0cd98c2d04ff96e4e (patch)
tree c28f51ade0b85d36ad24c66596f18159f193e10e
parent 3526faf09bd86a4f18fe606a3818e816c41d8c85 (diff)
sw: fix layout crash in SwObjectFormatterTextFrame::DoFormatObj()

Bisected with: bibisect-linux64-24.2
Comment 2 Commit Notification 2024-02-01 15:32:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/13865c4da30a3a2a5ab8efbd568c47952d3ffcee

tdf#159015 sw: layout: fix infinite loop in ::CalcContent()

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2024-02-01 15:38:12 UTC
fixed on master
Comment 4 Commit Notification 2024-02-06 19:36:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e000e1719199eebabedf4bc6938d8397e3392982

tdf#159015 sw: layout: fix infinite loop in ::CalcContent()

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-02-06 19:36:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6f14c818ad25e7fb1feb65ab8072e2a9918398d6

tdf#159015 sw: layout: fix infinite loop in ::CalcContent()

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2024-02-08 09:04:56 UTC
Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 43451b31969db882cd6c36054f43915ffbd8f252
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Michael, thanks for fixing this issue!!