tdf#159015 sw: layout: fix infinite loop in ::CalcContent()

SwObjectFormatter::FormatObj() will just return if IsAgain() is set, so
the while loop here won't make any progress.

(regression from commit 191babee4f0ec643b80e96b0cd98c2d04ff96e4e)

Change-Id: I1c194b148760ae05cf4dee1d5729be28e87d6ba0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162880
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 13865c4da30a3a2a5ab8efbd568c47952d3ffcee)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162895
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>